# interview-prep

./: .dockerignore  .env.example  .gitignore  AGENTS.md  COMPANY_COVERAGE.md  DSA_CHEATSHEET.md  Dockerfile  README.md  _quarto.yml  cv.md  deploy.sh  docker-compose.sandbox.yml  docker-compose.yml  index.html  main.py  pyproject.toml  run.py  stub_generator.py  tracker.py  web.py
.githooks/: pre-commit
ai_assisted/: README.md
behavioral/: README.md
cs_fundamentals/: README.md
docs/: API.md  MULTI_USER_DEPLOYMENT.md  TEST_RUNNERS.md  WASM_LIBS.md  WASM_SANDBOX.md
helpers/: all_calibre_articles.json  crawl_all_calibre.py
playbook/: README.md  coding_course_schedule.md  coding_number_of_islands.md  coding_trie.md  hackerrank_and_inperson_coding.md  qa_automate_test_environment.md  qa_cpu_gpu_bottleneck_isolation.md  speech_llm_agent_benchmarking_evaluation.md  speech_llm_latency_optimization.md  speech_llm_multimodal_audio_language_models.md  speech_llm_voice_agent_architecture.md  system_design_task_scheduler_multiple_machines.md  system_design_triton_inference_server.md  system_lowlevel_concurrency_producer_consumer.md  system_lowlevel_cuda_bank_conflicts.md  system_lowlevel_cuda_global_memory_coalescing.md  system_lowlevel_python_gil_concurrency.md  system_lowlevel_python_memory_gc.md  system_lowlevel_pytorch_systems_optimization.md
popular/: README.md  behavioral_star_intellectual_honesty.md  behavioral_star_one_team.md  coding_course_schedule.md  coding_lru_cache.md  coding_merge_intervals.md  coding_number_of_islands.md  coding_search_rotated_array.md  (+27 more)
(+2567 files in other folders)
