[project]
name = "interview-prep"
version = "0.1.0"
description = "Pattern-based coding interview preparation toolkit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
